<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.sarge.jove</groupId>
	<artifactId>JOVE</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>JOVE</name>
	<description>JOVE</description>
  
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>15</source>
					<target>15</target>
					<release>15</release>
					<compilerArgs>--enable-preview</compilerArgs>
					<compilerArgs>-XX:+ShowCodeDetailsInExceptionMessages</compilerArgs>
				</configuration>
			</plugin>
			
			<!--
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>1.0.1</version>
					</dependency>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>5.0.1</version>
						<scope>test</scope>
					</dependency>
					<dependency>
						<groupId>org.junit.vintage</groupId>
						<artifactId>junit-vintage-engine</artifactId>
						<version>4.12.1</version>
						<scope>test</scope>
					</dependency>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-launcher</artifactId>
						<version>1.0.1</version>
						<scope>test</scope>
					</dependency>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-runner</artifactId>
						<version>1.0.1</version>
						<scope>test</scope>
					</dependency>
				</dependencies>
			</plugin>
			 -->

<!--
TODO - ant task? custom Mojo?
			<plugin>
			     <artifactId>maven-antrun-plugin</artifactId>
			     <version>1.7</version>
			     <executions>
			         <execution>
			             <phase>generate-sources</phase>
			             <configuration>
			                 <target>
                                <exec dir="${project.basedir}/src/test/resources/demo" executable="" failonerror="true">
                                </exec>
                             </target>
			             </configuration>
			             <goals>
			                 <goal>run</goal>
			             </goals>
			         </execution>
			     </executions>
			</plugin>
-->
		</plugins>
 	</build>
	
	<properties>
	</properties>
	
	<dependencies>
	
	   <dependency>
	       <groupId>org.sarge.lib</groupId>
			<artifactId>lib</artifactId>
			<version>1.0.0-SNAPSHOT</version>
	   </dependency>
	
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.11</version>
        </dependency>

		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>5.3.0</version>
		</dependency>

<!--
		<dependency>
		    <groupId>org.apache.velocity</groupId>
		    <artifactId>velocity</artifactId>
		    <version>1.7</version>
		    <exclusions>
		    	<exclusion>
		    		<groupId>commons-lang</groupId>
		    		<artifactId>commons-lang</artifactId>
		    	</exclusion>
		    	<exclusion>
		    		<groupId>commons-collections</groupId>
		    		<artifactId>commons-collections</artifactId>
		    	</exclusion>
		    </exclusions>
		</dependency>
		
		<dependency>
		     <groupId>org.apache.velocity</groupId>
		     <artifactId>velocity-tools</artifactId>
		     <version>2.0</version>
		     <exclusions>
		     	<exclusion>
		     		<groupId>commons-collections</groupId>
		     		<artifactId>commons-collections</artifactId>
		     	</exclusion>
		     </exclusions>
		</dependency>
 -->
		
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.6.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
